{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 36,
  "lineage": "08f047a7-9f2f-2701-7fed-5c2823d4a93f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e5f2ce8997a90d3",
            "arn": "arn:aws:ec2:us-west-2:539145952779:elastic-ip/eipalloc-00e5f2ce8997a90d3",
            "association_id": "eipassoc-00bdd43f85f84b6e8",
            "domain": "vpc",
            "id": "eipalloc-00e5f2ce8997a90d3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c5a859600aa1423c",
            "private_dns": "ip-10-0-1-79.us-west-2.compute.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-44-253-87-183.us-west-2.compute.amazonaws.com",
            "public_ip": "44.253.87.183",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:internet-gateway/igw-0572f6a590fc01373",
            "id": "igw-0572f6a590fc01373",
            "owner_id": "539145952779",
            "tags": {
              "Name": "libnet-eks-prod-igw"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-igw"
            },
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e5f2ce8997a90d3",
            "association_id": "eipassoc-00bdd43f85f84b6e8",
            "connectivity_type": "public",
            "id": "nat-0e73646912cf459d2",
            "network_interface_id": "eni-0c5a859600aa1423c",
            "private_ip": "10.0.1.79",
            "public_ip": "44.253.87.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079eb53a6202075b1",
            "tags": {
              "Name": "libnet-eks-prod-nat-gateway"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:route-table/rtb-0aa555e18fecbf9e2",
            "id": "rtb-0aa555e18fecbf9e2",
            "owner_id": "539145952779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e73646912cf459d2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "libnet-eks-prod-private-rt"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:route-table/rtb-07f032495f56154c7",
            "id": "rtb-07f032495f56154c7",
            "owner_id": "539145952779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0572f6a590fc01373",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "libnet-eks-prod-public-rt"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfa33344f8cff749",
            "route_table_id": "rtb-0aa555e18fecbf9e2",
            "subnet_id": "subnet-05da19fceff8fd311"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d88d2ff93314820",
            "route_table_id": "rtb-0aa555e18fecbf9e2",
            "subnet_id": "subnet-078422ad92ea4ccc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0e8db8ddd83cf47",
            "route_table_id": "rtb-07f032495f56154c7",
            "subnet_id": "subnet-079eb53a6202075b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096bcd39afdc88d07",
            "route_table_id": "rtb-07f032495f56154c7",
            "subnet_id": "subnet-0144fe8f0af958b50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:security-group/sg-082a70b8d181a3f39",
            "description": "Security group for the EKS control plane.",
            "egress": [],
            "id": "sg-082a70b8d181a3f39",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with the control plane (HTTPS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d4a3f6f052cc889"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "libnet-eks-prod-cluster-sg",
            "name_prefix": "",
            "owner_id": "539145952779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "libnet-eks-prod-cluster-sg"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:security-group/sg-00d4a3f6f052cc889",
            "description": "Security group for the EKS worker nodes.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d4a3f6f052cc889",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow control plane to communicate with nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-082a70b8d181a3f39"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "libnet-eks-prod-node-sg",
            "name_prefix": "",
            "owner_id": "539145952779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "libnet-eks-prod-node-sg"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with the control plane (HTTPS)",
            "from_port": 443,
            "id": "sgrule-2020762940",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-082a70b8d181a3f39",
            "security_group_rule_id": "sgr-0206f0a62071c26f8",
            "self": false,
            "source_security_group_id": "sg-00d4a3f6f052cc889",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_ingress_from_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to communicate with nodes",
            "from_port": 0,
            "id": "sgrule-4005972498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00d4a3f6f052cc889",
            "security_group_rule_id": "sgr-0e4bf6bf57d5ef6bb",
            "self": false,
            "source_security_group_id": "sg-082a70b8d181a3f39",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1550043968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00d4a3f6f052cc889",
            "security_group_rule_id": "sgr-0c116513904f7caf9",
            "self": false,
            "source_security_group_id": "sg-00d4a3f6f052cc889",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:subnet/subnet-05da19fceff8fd311",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05da19fceff8fd311",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539145952779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "libnet-eks-prod-private-subnet-1"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-private-subnet-1"
            },
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:subnet/subnet-078422ad92ea4ccc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078422ad92ea4ccc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539145952779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "libnet-eks-prod-private-subnet-2"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-private-subnet-2"
            },
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:subnet/subnet-079eb53a6202075b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079eb53a6202075b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539145952779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "libnet-eks-prod-public-subnet-1"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-public-subnet-1"
            },
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:subnet/subnet-0144fe8f0af958b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0144fe8f0af958b50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539145952779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "libnet-eks-prod-public-subnet-2"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-public-subnet-2"
            },
            "vpc_id": "vpc-04ea5f10211da16eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:539145952779:vpc/vpc-04ea5f10211da16eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e575839c27211f64",
            "default_route_table_id": "rtb-04505d094e4abd9f6",
            "default_security_group_id": "sg-0e951e4d88427c8c9",
            "dhcp_options_id": "dopt-5b577b23",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ea5f10211da16eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04505d094e4abd9f6",
            "owner_id": "539145952779",
            "tags": {
              "Name": "libnet-eks-prod-vpc"
            },
            "tags_all": {
              "Name": "libnet-eks-prod-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}